# study-tools

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  ID.md  README.md  SBS Pāli-English Vocab.apkg  SBS_Pāli_Dictionary.md  _config.yml  analysis of SBS Pāli-English Recitations.odt  anki-card-class-phonetic-front.txt  anki-card-class-root-back.txt  anki-card-class-root-style.txt  anki-card-class-vocab-back.txt  anki-card-class-vocab-front.txt  anki-card-class-vocab-style.txt  anki-card-dhp-vocab-back.txt  anki-card-dhp-vocab-front.txt  anki-card-dhp-vocab-style.txt  anki-card-dhp-vocab.txt  anki-card-pat-back.txt  anki-card-pat-front.txt  anki-card-pat-style.txt  anki-card-sbs-vocab-back.txt  anki-card-sbs-vocab-front.txt  anki-card-sbs-vocab.txt  dhp-learning.md  dhp-vocab.md  dps.md  index.html  mkalldir.sh  mkdocs.yaml  nanatiloka.md  notebook_lm.md  pali-class-adv.md  pali-class-advance.md  pali-class-inter.md  pali-class.md  patimokkha-learning.md  patimokkha-word-by-word.md  (+28 more)
1-pre-pali-study/: index.html
2-sbs-book/: index.html
3-patimokkha/: index.html
4-dictionaries/: index.html
5-anki/: index.html
6-pali-class/: index.html
7-notebook-lm/: index.html
Analysis of SBS Pāli-English Recitations/: readme.md
ID after feedback/: dhp-vocab-ID.csv  sbs-pd-ID.csv
ID in the first possition/: dhp-vocab.csv
SBS Pāli Dictionary/: README.md  readme.md
SBS_Pāli_Dictionary/: SBS_Pāli_Dictionary.md
anki-decks/: (del) roots.md  (del) sutta-pitaka-vocab.md  dhp-vocab.md  native.md  parittas.md  patimokkha-learning.md  patimokkha-word-by-word.md  (+14 more)
(+1862 files in other folders)
