[project]
name = "study-tools"
version = "0.1.0"
description = "SBS DhammaVinaya Learning Tools website"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "requests>=2.31",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "tabulate>=0.9",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "beautifulsoup4>=4.14.3",
    "python-dotenv>=1.2.2",
    "language-tool-python>=3.3.0",
    "pyright>=1.1.410",
    "ruff>=0.15.16",
    "pre-commit>=3.7.1",
    "pyrefly>=1.0.0",
    "weasyprint>=68.1",
    "markdown>=3.10.2",
    "pypandoc>=1.17",
    "python-docx>=1.2.0",
]





[tool.hatch.build.targets.wheel]
packages = ["tools", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
